# routes.py
@@ -105,7 +105,7 @@ def delete_user(current_user,public_id):
 
     return jsonify({'message':"The user has been deleted!"}) 
 
-@api_request.route('/login')
+@api_request.route('/login', methods=['GET', 'POST'])
 def login(): 
     auth = request.authorization  
 
@@ -118,7 +118,7 @@ def login():
         return make_response('Could not verify', 401, {' WWW-Authenticate': 'Basic realm="Login required"'})
 
     if check_password_hash(user.password, auth.password):
-        token = jwt.encode({'public_id': user.public_id, 'exp': datetime.datetime.utcnow() + datetime.timedelta(minutes=30)}, os.getenv('SECRET'))    
+        token = jwt.encode({'public_id': user.public_id, 'exp': datetime.datetime.utcnow() + datetime.timedelta(minutes=30)}, os.getenv('SECRET_KEY'))    
         
         return jsonify({'token': token.decode('UTF-8')})
 
